# nexus

./: .env.test.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  NOTICE  PROJECT_STATE.md  README.md  docker-compose.test.yml  nexus_cli.py  pyproject.toml  requirements.txt  setup.py  status_check.py  test_all_modules.py  test_cog_eng_import.py  test_consolidation.py  test_functional.py  test_imports.py  test_platform.py  test_providers_import.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  cla.yml
config/: config.yaml  config_enhanced.yaml  nexus_intelligence.yaml  simulation_config.yaml
docs/: README.md  basic-structure
legal/: README.md
legal/agreements/: CCA.md  CONTRIBUTOR-ACKNOWLEDGEMENT.md  EMPLOYER-CCA.md
legal/licenses/: COMMERCIAL-LICENSE.txt  temp-licenses.json
scripts/: create_new_shortcut.ps1  create_shortcut.ps1  health_check.py  import_from_claude_memory.py  install_and_run.bat  launch_nexus.bat  launch_nexus.pyw  launch_nexus_debug.bat  migrate_from_claude_memory.py  setup_redis.ps1  start_nexus_full.bat  start_redis.bat  update_shortcut.ps1  verify_complete.py  verify_phase1.py
services/: license_server.py
src/: tmpclaude-8f19-cwd
src/config/: config.schema.json
src/nexus/: __init__.py  licensing.py  platform.py  service.py
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_core_engine.py  test_cost_tracking.py  test_enhanced_api.py  test_ensemble_core.py  test_models.py  test_monitoring.py  test_scoring.py  test_strategies.py
tools/: generate_license.py
(+326 files in other folders)
